// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Sidenav Nav should render Repositories link 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-medium StyledProps--padding-right-medium StyledProps--padding-top-large StyledProps--padding-bottom-small"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall StyledProps--font-size-small StyledProps--color StyledProps--color-grey500"
      >
        projectLabel
      </p>
      <div
        class="bp3-popover-wrapper bp3-fill"
      >
        <div
          class="bp3-popover-target bp3-popover-open"
        >
          <button
            aria-label="selectProject"
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main popoverTarget selectButton bp3-active Button--with-current-color Button--without-shadow Button--withRightIcon"
            data-testid="project-select-button"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-size-normal StyledProps--padding-xsmall"
              >
                selectProject
              </p>
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pickProjectHelp"
      style="background-image: url(test-file-stub);"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey200 StyledProps--padding-small"
      >
        pickProject
      </p>
    </div>
    <a
      class="link"
      href="/account/dummy/code/dummy/dummy"
    >
      <p
        class="StyledProps--font StyledProps--main text"
      >
        repositories
      </p>
    </a>
  </div>
</div>
`;

exports[`Code Sidenav Nav should render Repositories link 2`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/dummy/code/dummy/dummy
    </div>
  </div>
</div>
`;

exports[`Code Sidenav Nav should render Settings link 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-medium StyledProps--padding-right-medium StyledProps--padding-top-large StyledProps--padding-bottom-small"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall StyledProps--font-size-small StyledProps--color StyledProps--color-grey500"
      >
        projectLabel
      </p>
      <div
        class="bp3-popover-wrapper bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <button
            aria-label="selectProject"
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main popoverTarget selectButton Button--with-current-color Button--without-shadow Button--withRightIcon"
            data-testid="project-select-button"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-size-normal StyledProps--padding-xsmall"
              >
                selectProject
              </p>
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pickProjectHelp"
      style="background-image: url(test-file-stub);"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey200 StyledProps--padding-small"
      >
        pickProject
      </p>
    </div>
    <a
      class="link"
      href="/account/dummy/code/dummy/dummy"
    >
      <p
        class="StyledProps--font StyledProps--main text"
      >
        repositories
      </p>
    </a>
    <a
      class="link subNav"
      href="/account/dummy/code/dummy/dummy/test"
    >
      <p
        class="StyledProps--font StyledProps--main text"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
          data-icon="file"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 20 20"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.167 7.334H5.833a.333.333 0 100 .667h8.334a.333.333 0 100-.667zm-8.334-2h3.334a.333.333 0 100-.667H5.833a.333.333 0 100 .667zM14.167 10H5.833a.333.333 0 100 .667h8.334a.333.333 0 100-.667zm0 2.666H5.833a.333.333 0 100 .667h8.334a.333.333 0 100-.667zm0 2.667H5.833a.333.333 0 100 .667h8.334a.333.333 0 100-.667z"
              fill="currentColor"
            />
            <path
              d="M12.971 0H2.167v20h15.666V4.862L12.971 0zm.196 1.138l3.528 3.529h-3.528V1.138zM2.833 19.333V.667H12.5v4.666h4.667v14H2.833z"
              fill="currentColor"
            />
          </svg>
        </span>
        common.files
      </p>
    </a>
    <a
      class="link subNav"
      href="/account/dummy/code/dummy/dummy/test/commits"
    >
      <p
        class="StyledProps--font StyledProps--main text"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
          data-icon="git-branch-existing"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 9"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
              fill="#383946"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        commits
      </p>
    </a>
    <a
      class="link subNav"
      href="/account/dummy/code/dummy/dummy/test/branches"
    >
      <p
        class="StyledProps--font StyledProps--main text"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main Text--icon StyledProps--padding-right-xsmall"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        code.branches
      </p>
    </a>
    <a
      class="link subNav"
      href="/account/dummy/code/dummy/dummy/test/settings"
    >
      <p
        class="StyledProps--font StyledProps--main text"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-cog StyledProps--main Text--icon StyledProps--padding-right-xsmall"
          icon="cog"
        >
          <svg
            data-icon="cog"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              cog
            </desc>
            <path
              d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        settingsLabel
      </p>
    </a>
  </div>
</div>
`;

exports[`Code Sidenav Nav should render Settings link 2`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/dummy/code/dummy/dummy/test/settings
    </div>
  </div>
</div>
`;
